# glofas-demo

./: .gitignore  README  pyproject.toml  requirements.txt  test-plugin-glofas-bd-june-historical.py  test-plugin-glofas-pk-august-historical.py
app/: glofas_demo.py  main.py
app/ml/: features.py  predict.py  train_models.py  utils.py
app/models/: linreg.joblib  metrics.csv  rf.joblib  thresholds.json  xgb.joblib
cache/: glofas-2012_2022_BD.grib.5b7b6.idx
climetlab_glofas_demo/: __init__.py
climetlab_glofas_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
