[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climetlab-glofas-demo"
version = "0.0.1"
description = "CliMetLab dataset helpers for GloFAS tiles used in glofas-demo"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["climetlab_glofas_demo"]

[project.entry-points."climetlab.datasets"]
glofas-bd-june-historical = "climetlab_glofas_demo:PKAugustHistorical"
glofas-generic-historical = "climetlab_glofas_demo:GlofasHistorical"
